compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_success_snapshot_tests@field_assignment_success.tapir.snap
---
source: compiler/src/compile/type_visitor.rs
expression: all_types
input_file: compiler/src/compile/snapshot_tests/type_visitor/field_assignment_success.tapir
---
[
  ("p", Struct(StructId(0))),
  ("r", Struct(StructId(1))),
]
