compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_success_snapshot_tests@loop_with_break_success.tapir.snap
---
source: compiler/src/compile/type_visitor.rs
expression: all_types
input_file: compiler/src/compile/snapshot_tests/type_visitor/loop_with_break_success.tapir
---
[]
