compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_success_snapshot_tests@multi_assign_extern_success.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: all_types
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/multi_assign_extern_success.tapir
---
[
  ("int_prop", Int),
  ("x", Fix),
  ("y", Fix),
  ("hp", Int),
  ("mp", Int),
  ("speed", Fix),
]
